# PhiOpedit

./: CMakeLists.txt  LICENSE  Main.qml  README.md  SongCover.qml  SongHighlightBox.qml  SongLoader.cpp  SongLoader.h  SongStrip.qml  main.cpp  resources.qrc
